# scsc17summer

./: .gitignore  CMakeLists.txt  Finduvb.cpp  Makefile  README.md  harmonic.hpp  main.cpp  square.txt  test.cpp  utility.cpp  utility.hpp
NLA_src/: Makefile  QuickStart.md  sgp_main.cpp
NLA_src/core/: graph_adjacency.cpp  graph_laplacian.cpp  read_graph.cpp  set_graph_type.cpp
NLA_src/cuda/: solve_shiftevp_cuda.cpp
NLA_src/data/graph/: cattle
NLA_src/include/: sgp.hpp
cmake/: options.cmake  packages.cmake
cmake/modules/: FindMAGMA.cmake  FindMKL.cmake
data/: CMakeLists.txt  butterfly.txt  cube.txt
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: sgp.hpp
old_files/: Finduvb.cpp  ReadObj.cpp  solve_ls_mkl.cpp
src/: CMakeLists.txt  def.hpp  harmonic.hpp  main.cpp  main_3Dface_evp.cpp  main_sparse.cpp  sgp_main.cpp  test.cpp  timer.hpp  utility.cpp  utility.hpp
src/core/: construct_laplacian.cpp  construct_laplacian_sparse.cpp  graph_adjacency.cpp  graph_laplacian.cpp  harmonic.hpp  map_boundary.cpp  read_args.cpp  read_graph.cpp  read_object.cpp  reorder_vertex.cpp  solve_harmonic.cpp  verify_boundary.cpp  verify_boundary_sparse.cpp  write_object.cpp  wrtie_object.cpp
src/cuda/: solve_shiftevp_cuda.cpp
src/for_student/: construct_laplacian.cpp
src/magma/: solve_harmonic_magma.cpp  solve_harmonic_sparse_magma.cpp
src/mkl/: construct_laplacian_mkl.cpp  map_boundary_mkl.cpp  solve_harmonic_mkl.cpp  solve_harmonic_mkl_gesv.cpp  solve_harmonic_mkl_getrfi.cpp  solve_harmonic_mkl_posv.cpp  solve_harmonic_mkl_potrfi.cpp  solve_harmonic_sparse_mkl.cpp
src/sparse/: construct_laplacian_sparse.cpp  verify_boundary_sparse.cpp
